desktop first version of scream pong

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
     </div>
   </canvas>
 
+  <script src="main.js" type="text/javascript"></script> 
+  <script src="volume-meter.js" type="text/javascript"></script> 
   <script src="game.js" type="text/javascript"></script> 
   <script src="pong.js" type="text/javascript"></script>
   <script type="text/javascript">
