--- a/index.html
+++ b/index.html
@@ -26,37 +26,13 @@
         This is a javascript version of Pong.
       </p>
       <p>
-        Press <b>1</b> for a single player game.<br>
-        Press <b>2</b> for a double player game.<br>
-        Press <b>0</b> to watch the computer play itself.
+        Press <b>1</b> to enter game<br>
       </p>
-      <p>
-        Player 1 moves using the <b>Q</b> and <b>A</b> keys.<br>
-        Player 2 moves using the <b>P</b> and <b>L</b> keys.
-      </p>
+      <p>You play by just screaming :p </p>
       <p>
         <b>Esc</b> can be used to abandon a game.
       </p>
-    </div>
-
-    <div class='settings'>
-      <label for='sound'>sound: </label>
-      <input type='checkbox' id='sound'>
-    </div>
-
-    <div class='settings'>
-      <label for='stats'>stats: </label>
-      <input type='checkbox' id='stats' checked>
-    </div>
-
-    <div class='settings'>
-      <label for='footprints'>footprints: </label>
-      <input type='checkbox' id='footprints'>
-    </div>
-
-    <div class='settings'>
-      <label for='predictions'>predictions: </label>
-      <input type='checkbox' id='predictions'>
+      <p>This is adapted from <a src='https://github.com/jakesgordon/javascript-pong'>this page/<a></p>
     </div>
 
   </div>
